--- a/index.html
+++ b/index.html
@@ -5,20 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/css/minified/main.min.css">
+
+</head>
     <body>
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Media</a></li>
-            <li><a href="">Iframes&colors</a></li></ul>
-        </nav>
-        <h1>Welcome to media and color practice </h1>
-        <h4>Explore the use of images and different color types in HTML and CSS.</h4>
-        <h2>Image Gallery Task</h2>
-        <h5>Create a gallery of images with different styles:</h5>
-        <div class="flex-container">
-        <div class="item1"><img src="https://admirable-haupia-cbb616.netlify.app/bird-8788491_1280.webp" style="width: 90%"></div>
-        <div class="item2"><img src="https://admirable-haupia-cbb616.netlify.app/bird-8788491_1280.webp" style="width: 90%"></div>
-        <div class="item3"><img src="https://admirable-haupia-cbb616.netlify.app/bird-8788491_1280.webp" style="width: 90%"></div>  
+     <nav>
+       <ul>
+         <li>Home</li>
+         <li>About</li>
+         <li>ContactUs</li>
+       </ul>
+     </nav>
+     <h1>MyTeam</h1>
+     <section>
+      <h1>About</h1>
+      <h3>We help companies build dynamic teams made up of top global talent. Using our network of passionate professionals we drive innovation and deliver incredible outcomes. Talented, diverse teams shape the best products and experiences. We’ll bring those teams to you.</h3>
+     </section>
+     <article>
+      <h1>Meet The Directiors</h1>
+      <div class="grid-container">
+        <div class="grid-item1"><img src="https://s3-alpha-sig.figma.com/img/f793/cb04/68e986e2c3676c948d91be057b3e02a7?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=lTBuINvqAMy6qeSJv~M9BjsA94N9IAOHcR0BpJ6y8cQtmiAGPBu3ArAjGUjAeEKeWkR~JORCMrvmtuF0udsEMCs3EI5EIqbzKA7aAVhf-I8ncxFtCgex3-rgIJvAbw-5rfLB6mIuc1fwH8P1Ty1nISusAVgebWelTY9NSz23N54TFHismnYTztN-Fzzq2qh08S6w6KeBOu6cbmVKkrL7XIcGYGy1ywh72PxFsuf5UYbhQSJKUayOESUN547G4ET2zA-2zPIQFqzHe3iJ~oBnbYkRIzR5Pc-kKi8hIi6NIUEeZTbbZjLa-ZuEJjmVrEjof8ACwnB5a-E~P6KqL~Ovwg__" style="width: 100px"><h3>Nikita Marks</h3><h4>Founder & CEO</h4><button>+</button></div>
+        <div class="grid-item2"><img src="https://s3-alpha-sig.figma.com/img/d7e5/e282/500e659bb1b5ebdc0f0326d279792cf0?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=hlGNCuBSqyzyrbePkQRV2upNaD~b2gaeM~kZIrurPBoiGtuaolxRvyjhLZfTfuKRKWBIjel9o8rqWsdlVfc3euqBeKVd3lMsole9STqKSbuHG2qF-hKeOEGtvrp~jFGtYhyxAyyTroNqQ~kjpqV2Ds0isDVk02lXeierf7v5CbxlGOjS7oRdj76FOVlrQWDDOZfAUm7PFDln8FC2Qt-bUFB9zdt8T1KvdNVu8ZaPoRfA9xHEQRFDz-vUot9-BsJj7ZeWuSn2ex9YrIzVoR0AjSu4e33GMAyRku3jvax0ciL7ZxmOK65RMJNYRw7TCZZzavphXqMuNVjrAo2c4i~zhg__" style="width: 100px"><h3>Cristian Duncon</h3><h4>Co-Founder & COO</h4><button>+</button></div>
+        <div class="grid-item3"><img src="https://s3-alpha-sig.figma.com/img/8166/7d1e/4d3b12dfd4c45cee01d0681fe6c836d1?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=WYFAk~m2ITnf-PzEjB3TyhA4j2NRfZlr0L4DwyyiXpTff2qeP9JVmbk3EBhi3zXP25P8-wr8yngP6P9D5TF-Cyox9wtDZ7B0ZecoHmS8Q-sL3CGWwH1X0BnwMiROHbR55ZMFoeymp3eKZvsYaly88EnTUU9HDBVyw7ONyg4X5nOF~9-IA7PGCzdRYtXJuZiOXix4ntgMdOCWT2YnYS8hs8Bv2puRm4u~PLvVg8SKrPYohUkdhsEBatMw3MnbiVvI73n8SKsTFAG8MoGhCUZTIlbTJj7VlQdIdtd7HGalM95KUgPoBq~qcS20Qu1nukqThn~BTr4TU6P7WkKLyg96Iw__" style="width: 100px"><h3>Cruz Hamer</h3><h4>Founder & CTO</h4><button>+</button></div>
       </div>
-      </body>
+     </article>
+     <footer>
+      <h1>Some of our clients</h1>
+      <img src="https://s3-alpha-sig.figma.com/img/8080/8efa/42ed0c5d17494fde69934cd937927bfa?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pkwkEltiXLgRWeA9~79FfFj3IkoiBHXJnGlumY-VqjgsckVvc7OSmVrGVvTzrvA2kuJw-XsGCx8Lxu7isTqCqF0rjw81KEFT85zv5yqRP~299xZS-FI~LpWqAdIz290ZzQ786nbFWjPhjggxlLmgxefYOAu0sEgX6Umaz0NkpDm4b4hpzC9A38~LxvAqynqOqX3pjJtGXdc3zT4CPrnq3ItiVHIIUFF8yJnobSR9bkD7NgCGkeDez2UgAq62vLf3sTQL4BkCPMUO9WXhhE79fj8RcP35PFuCpsAeB1wq501zB-ZhEGNUQfkzMgz-oOamkwkSd7RjYBj-hZJIshn6MQ__" style="width: 165px"/>
+      <img src="https://s3-alpha-sig.figma.com/img/6640/8f3c/4ddb64d93ea208689baa8a7f32578519?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Eo9b6ArkhgcqnuQptnB2ww6FwRX6X~jp1aV5SGwA-z35V4OgshkMakVXqXTkfZPDA8i9UC-I5K7QqNVK~IdZ1mAIOvrwF~w4jfUAKoB1lo8t-alSUhwv5IccPjHgySoOCwn6EajWZgCrVeskxL~GKUB-0cfhmGVdjs3-H9EeBXkooll3Sh7t1Z1z3MvAnGwqTE2-oBjR~mxlUFfSbFdiPY5R55iO~1~oyvvZHe5jaQn~uB70o65qo9krjYRUY0kOKPld12lST1UkSX~lvDlDBK07cAf6QhJtCCdjsllKcMnJ6ihekcveqS7II66hI6kj31PjtA0qqZeqJPdfUH2-NA__" style="width: 184px"/>
+      <img src="https://s3-alpha-sig.figma.com/img/f507/1d25/daf8ccb623d411d3cfef100b514b856a?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=AxkeHZHB7cPH0pYphvkqJPkBn7kEHrS3r2CTm7VyL5jKanIm5Ffue5nw3BCBWuNECA8~FtVsg0Ct348lU1hsPly0wvWZ3509j5dNXsapotHewUxEBqVU1~FPStwv0h9mwJeg-NFciV2y9QG-36TpovVzBin0ZLf76jd3f0nNoVy05BROevp2O4IcTvoYpFxNcBRllFz1pgBoxsShKKQ8qLFED0RWYx0GA4PzkqMI~lwIiYwjxiONg0aI2J8-nhijQGyhzDCimOaeS-tdgWSnFMArHS1tZ6sdR7jfQJ7S4u3~L-i2nymN~5MtgpW-TTMBhKxblKWJQeWPNcUKnQKOnQ__" style="width: 180px"/>
+      <img src="https://s3-alpha-sig.figma.com/img/dcac/24c0/875489d95418e45479a801592bea4232?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=J86FpTIxS7FMYlH2pC~OiF-JMu8hIGf~T0gW4TCG-58f3ShoGZ18IM4IBe4YgdrtEx4EZpgvhXikG3IN1b5tqqGGclQwnKwTHZy3XgbqOgjRkXZS4ZPeFVDQ-heY2kCTh7QSMSuh9QkvY~vKEussgnRbd4G-OsJOB23LKcIoYC4J8dpIqWBs5LFGk-XV8dT5oweV1AxMMbXL8~dZr4ezjPZtRy~OAmuFyjtxjuCd5Zi0dPoTUzSwbNZiRqFPXRU9hmE72XC6krwd-LWjqQ6GGmMyzoqOS9Bn8sIhrCZ7SVLwefxQlM~XMF-ZxSgAJLELUWFZT33gd42mgTGzALIwSQ__" style="width: 165px"/>
+      <img src="https://s3-alpha-sig.figma.com/img/71ef/b3a5/e3a53beb2638cdd2d32b1988997f45df?Expires=1728864000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=a6hmQMk-f~sqLanQF2jRVa20YVj82-4RVffCqqllpOGzepdJwiTZB6MiFqKBKA7MKsah2vVj74uOo9aDvWpE-YbbMtHuGb6L~~dv64Yb9VLI2SFQaaXgkBCpja5DueeyxcdMrMjtwAcuTPAANFbdqzxrdhI5dEoJ1QPn-TwEYGr34y-b-mDdzzz2R5UuqOxLWRB-5nwXyjmy4TC8yJ5TnBlNlX0K8vjMqxr7pa7SNhxIC-t6UHpuJAQuyZEs0IZ9IYmnBDiiWhnvlZDGlLJmrTnHJbmzzgDW3NQjvY9Kdt6Ng4djxRqdHtIy-ZuDKmNn2jQ0BgUj8jMwiSmvH0zYKA__" style="width: 98px"/>
+      <h1 class="footer-h1">Ready to get started?<button>Contact Us</button></h1>
+      <h1 class="myteam">MyTeam</h1><div class="icon-container"><img class="icons" src="https://cdn.iconscout.com/icon/free/png-512/free-facebook-logo-icon-download-in-svg-png-gif-file-formats--fb-social-media-pack-logos-icons-721949.png?f=webp&w=256" style="width: 50px"/>
+      <img class="icons" src="https://cdn.iconscout.com/icon/free/png-512/free-pinterest-logo-icon-download-in-svg-png-gif-file-formats--social-media-color-pack-logos-icons-151104.png?f=webp&w=256" style="width: 50px"/>
+      <img class="icons" src="https://cdn.iconscout.com/icon/free/png-512/free-twitter-logo-icon-download-in-svg-png-gif-file-formats--social-media-logos-pack-icons-189787.png?f=webp&w=256" style="width: 50px"/></div>
+     </footer>
+    </body>
